# SRB2web

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-wasm.bat  build-wasm.sh  build.sh  clone-vcpkg.sh  index.html  load-emsdk.bat  load-emsdk.sh  package-lock.json  package.json  relay-server.js  setup-build.bat  setup-build.sh  setup-submodules.sh  vcpkg-setup.bat  vcpkg-setup.sh  webpack.config.js
.github/workflows/: build_site.yml  build_site_release.yml
build-wasm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-wasm/assets/: Makefile  cmake_install.cmake
build-wasm/src/: Makefile  cmake_install.cmake  config.h
build-wasm/src/blua/: Makefile  cmake_install.cmake
build-wasm/src/hardware/: Makefile  cmake_install.cmake
build-wasm/src/netcode/: Makefile  cmake_install.cmake
build-wasm/src/sdl/: Makefile  cmake_install.cmake
launcher-dist/: file.html  filemanager.bundle.js  launcher.bundle.js  shared.bundle.js  srb2.js
launcher-src/: base_html.html  dedicated.js  dialog.js  display-settings.js  elms.js  game.js  index.js  relayconfig.js  relayoption.js  styles.css
launcher-src/elms/: display-options.js  file-manager-button.js  index.js  launcher-details.js  launcher-main.js  loader-main.js  loading-logo.js  netgame-browser.js  normal-logo-elm.js  pixel3-font.js  play-button.js  relay-config.js  relay-details.js  relay-status-details.js  style-elms.js  styles.css  touch-controls-dialog.js  touch-controls.js
launcher-src/filemanager/: elms.js  index.js  load.js  pathutil.js  styles.css
launcher-src/net/: attach.js  index.js  lzstring.js  rtc-config.js
launcher-src/net/state/: connect.js  index.js  listen.js  listench.js  util.js
launcher-src/netbin/: index.js
launcher-src/oldnet/: index.js
launcher-src/oldnetv2/: index.js
launcher-src/touch/: button.js  defaultpreset.js  g_input.c  handler.js  index.js  keyboard.js  keydef.js  processor.js
src/: CMakeLists.txt  console.c  console.h  d_main.c  g_game.c  g_input.c  g_input.h  hu_stuff.c  hu_stuff.h  lua_inputlib.c  m_menu.c  r_main.c  screen.c  screen.h  snake.c
src/hardware/: hw_cache.c  hw_main.c
src/hardware/r_opengl/: ogl_win.c  r_opengl.c
src/netcode/: CMakeLists.txt  client_connection.c  d_clisrv.c  d_net.c  d_net.h  d_netcmd.c  d_netfil.c  emscripten_serverinfo.c  emscripten_serverinfo.js  http-mserv.c  mserv.c  mserv_web.js  server_connection.c
src/sdl/: CMakeLists.txt  i_net.c  i_net_web.js  i_system.c  i_video.c  mixer_sound.c  ogl_sdl.c
static/: githubdev-fix.js
